# water-forecast-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
water_forecast_ai/: main.py
